# quantforge

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_indicators.py
crates/quantforge-rust/: Cargo.toml  pyproject.toml
crates/quantforge-rust/src/: lib.rs
examples/: 01_sma_crossover.py  02_mean_reversion_pairs.py  03_regime_filtered_momentum.py
src/quantforge/: __init__.py  cli.py
src/quantforge/analytics/: __init__.py  metrics.py
src/quantforge/core/: __init__.py  clock.py  events.py  queue.py  types.py
src/quantforge/data/: __init__.py  base.py  cache.py  yfinance_feed.py
src/quantforge/engine/: __init__.py  backtester.py
src/quantforge/execution/: __init__.py  broker.py  commission.py  slippage.py
src/quantforge/portfolio/: __init__.py  portfolio.py  risk.py
src/quantforge/strategy/: __init__.py  base.py  indicators.py  regime_filter.py
src/quantforge/viz/: __init__.py  dashboard.py
tests/: conftest.py  test_backtest.py  test_broker.py  test_indicators.py  test_metrics.py  test_portfolio.py  test_queue.py  test_regime_filter.py  test_types.py
