[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "quantforge"
version = "0.1.0"
description = "Event-driven multi-market backtesting and paper-trading framework"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Wesley Si Ying" }]
keywords = ["quant", "backtesting", "trading", "finance", "algorithmic-trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "yfinance>=0.2.40",
    "scipy>=1.12",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
viz = ["plotly>=5.20", "streamlit>=1.32"]
crypto = ["ccxt>=4.2"]
live = ["alpaca-py>=0.20", "websockets>=12.0"]
regime = ["regime-hmm @ git+https://github.com/wesleysiying-boop/regime-hmm.git"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "ruff>=0.7",
    "mypy>=1.10",
    "pandas-stubs",
    "types-requests",
]
all = ["quantforge[viz,crypto,live,dev]"]

[project.scripts]
qf = "quantforge.cli:main"

[project.urls]
Homepage = "https://github.com/wesleysiying-boop/quantforge"
Issues = "https://github.com/wesleysiying-boop/quantforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quantforge"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "SIM",              # flake8-simplify
    "RUF",              # ruff-specific
    "PL",               # pylint
    "PERF",             # perflint
]
ignore = [
    "PLR0913",          # too many arguments — common in finance APIs
    "PLR2004",          # magic value — frequent in numeric code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "N802", "N803", "N806"]
"examples/*" = ["E402", "RUF002"]
# The regime filter interfaces with the regime-hmm package, which follows
# the math convention of uppercase X / T / K for matrix shapes.
"src/quantforge/strategy/regime_filter.py" = ["N802", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
plugins = []

[[tool.mypy.overrides]]
module = ["yfinance.*", "ccxt.*", "alpaca.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=quantforge --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "slow: tests that hit the network or take >1s",
    "integration: tests requiring external services",
]

[tool.coverage.run]
branch = true
source = ["quantforge"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
